src/utils/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-7xl;
  }
  h2 {
    @apply text-6xl;
  }
  h3 {
    @apply text-5xl;
  }
  h4 {
    @apply text-4xl;
  }
  h5 {
    @apply text-xl;
  }
  h6 {
    @apply text-lg;
  }
}

p > a {text-decoration: underline;}
.title {text-align:left;}
table.tiers td {padding-left:1rem; padding-bottom:1rem;}
p {padding:0 1rem 1rem 1rem; font-family: "Crimson Text"; line-height: 1.6rem; font-weight: 300;}
.cms ul {margin-left:2em; padding:1em; list-style:circle;}
.cms ul li:first-child {padding-top:0;}
.cms ul li {padding-top:.5em; font-family: "Crimson Text";}
.cms strong {font-weight: bolder; font-weight: 600;}
strong {font-weight: bolder; font-weight: 600;}
.cms h3 {margin:2rem 0; font-size:3rem; color:#808080;letter-spacing: .02em; }
.cms h4 {margin:2em 0; font-size: 2rem;color:#808080;letter-spacing: .02em;}
.cms h5 {margin:1em 0; font-size:1.5rem; color:#808080;letter-spacing: .02em;}
.cms h6 {color: #808080;
  padding: 1em 0;
  letter-spacing: .0235em;}
.dropCap p:first-child:first-letter {
  color: rgb(29, 28, 28);
  font-family: "Quicksand";
  float:left;
  font-size: 2.5rem;
  line-height: 2rem;
  padding-top:4px;
  padding-right: 4px;
}
p.dropCap:first-child:first-letter {
  color: rgb(29, 28, 28);
  font-family: "Quicksand";
  float:left;
  font-size: 2.5rem;
  line-height: 2rem;
  padding-top:4px;
  padding-right: 4px;
}
div.dropCap:first-child:first-letter {
  color: rgb(29, 28, 28);
  font-family: "Quicksand";
  float:left;
  font-size: 2.5rem;
  line-height: 2rem;
  padding-top:4px;
  padding-right: 4px;
}
a:hover { text-decoration: underline; color:#1F2937; }
article ul {padding:1em; list-style: disc;}
button[aria-selected="false"]{
  background-color: #f7f7f7f7;
}
div[aria-expanded="false"]{
  background-color: #f7f7f7f7;
}
.light {font-weight: 200;}
.quoted {position:relative;}
.quoted::before {
  float:left;
  font-size: 4rem;
  line-height: 1rem;
  padding-right: 4px;
  content: "\201C";
  font-family: "Crimson Text";
  color:darkgrey;
}
.quoted::after {
  font-size: 3em;
  position:relative;
  bottom:1rem;
  content: "\201E";
  left:80%;
  color:darkgrey;
  font-family: "Crimson Text";
}

.drop-shadow-img  {
  -webkit-filter: drop-shadow(0 4px 2px #2b2b2b);
  filter: drop-shadow(2px 4px 8px #2b2b2b);
}

.slick-prev {left:-10px !important;}
.slick-next {right:0 !important;}
.slick-prev:before,
.slick-next:before {
    color:#727272 !important; 
}

.tl-storyslider {height:500px !important;}

h4 {padding-top:1rem; padding-bottom:1rem;}
.greige {background-color: #f7f7f7;}

